👌 IMPROVE: Make game playable

--- a/frontend/common/index.html
+++ b/frontend/common/index.html
@@ -15,7 +15,7 @@
     -->
 	<link rel="manifest" href="./manifest.webmanifest" />
 
-	<title>Michigan Kicker</title>
+	<title>Tennis Strikes</title>
 
 	<script async src='https://www.google-analytics.com/analytics.js'></script>
 
